app/assets/stylesheets/navbar.css
header {
  align-items: center;
  justify-content: space-between;
  height: 3.75rem;
  padding: 0.688rem 1.25rem;
  gap: 1rem;
  position: relative;
  display: none;
}

header.passive-header {
  display: none;
}

#logo {
  width: 8.25rem;
  height: 2.375rem;
}

#search-container {
  position: absolute;
  top: 16px;
  z-index: 1;
  margin: 0 auto;
  display: flex;
  border-radius: 0 0 0.313rem 0.313rem;
  padding: 0 20px;
}

.narrow-search {
  width: 80%;
  right: 0;
}

.standard-search {
  width: 100%;
}

#search-wrapper {
  background-color: var(--white);
  border-radius: 30px;
  box-shadow: 0 0.25rem 0.25rem 0 rgba(0, 0, 0, 0.25);
  width: 100%;
}

#search-icon {
  width: 1.688rem;
  height: 1.5rem;
  z-index: 1;
}

#search-form {
  display: flex;
  align-items: center;
  gap: 8px;
  padding: 0.5rem 1.25rem;
  height: 50px;
  margin-bottom: unset;
  flex-direction: row;
}

#search-field {
  width: 100%;
  border: none;
  background: var(--white);
  z-index: 1;
}

#search-field::placeholder {
  font-size: 1.125rem;
  color: var(--gray);
}

#search-field:focus {
  outline: none;
}

#search-results {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.result-icon {
  width: 24px;
}

.search-results-link-container {
  & mark {
    background-color: var(--green);
    color: var(--white);
  }

  height: auto;
  width: 100%;
  padding: 1rem 1.25rem;
}

.search-results-link {
  text-decoration: none;
  display: block;
}

.search-address {
  font-size: 14px;
  color: var(--gray);
}

#site-nav {
  background-color: var(--white);
  padding: 5px 20px;
  width: 100%;
  position: fixed;
  bottom: 0;
  border-radius: 30px 30px 0 0;
}

.panel img {
  width: 40px;
  height: 40px;
}

.panel span {
  display: none;
}

#nav-menu {
  display: flex;
  list-style: none;
  justify-content: space-evenly;
  max-width: 400px;
  margin: auto;
}

.nav-link {
  width: 50px;
  height: 50px;
}

.nav-link a,
#add-new {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100%;
  justify-content: center;
}

.nav-icon {
  width: 40px;
  height: 40px;
}

.nav-link.active .nav-icon {
  fill: #000e06;
}

.nav-link.active .nav-icon path {
  fill: var(--black);
  stroke: var(--black);
}

.nav-link.active .nav-icon line {
  stroke: var(--black);
}

#nav-menu span {
  font-size: 9px;
  text-align: center;
}

#vh-handle {
  display: none;
}

#add-place-link {
  display: flex;
  align-items: center;
  font-size: 1.125rem;
}

.vh-instagram a {
  display: flex;
  align-items: center;
  gap: 5px;
  height: 42px;
}

#sign-in-link {
  border-radius: 1.25rem;
  background: var(--green);
  color: var(--white);
  font-weight: 500;
  line-height: 100%;
  padding: 0.813rem 1.313rem;
  font-size: 1.125rem;
  width: max-content;
}

.wrapper {
  display: flex;
}

.dropdown {
  list-style-type: none;
  display: flex;
  align-items: center;
  font-size: 1.125rem;
  gap: 5px;
}

#nav-menu.hidden {
  display: none;
}

.hidden {
  display: none;
}

.desktop {
  display: none;
}

#account-links {
  & li {
    width: 50%;
  }

  height: 100vh;
  display: flex;
  flex-direction: column;
  font-size: 1.125rem;
  padding-top: 35%;
  list-style-type: none;
  align-items: center;
  gap: 1.125rem;
}

#add-options {
  & div {
    display: flex;
    align-items: center;
    gap: 16px;
    justify-content: center;
  }

  & a {
    background-color: var(--white);
    border: 0.5px solid var(--green);
    width: 50px;
    height: 50px;
    display: flex;
    flex-direction: row;
    padding: 4px;
    border-radius: 8px;
  }

  position: absolute;
  top: -70px;
  width: 100%;
}

@media (min-width: 1024px) {
  .mobile {
    display: none;
    width: 0;
  }

  .desktop {
    display: block;
  }

  header {
    padding: 16px 48px;
    height: 4.375rem;
    display: flex;
  }

  header.passive-header,
  header.active-header {
    height: 60px;
    display: flex;
    align-items: center;
  }

  .narrow-search {
    right: unset;
  }

  #search-container {
    justify-content: center;
    width: 40vw;
    padding: 0 0 0 48px;
    left: 0;
  }

  #search-wrapper {
    display: flex;
    flex-direction: column;
    border: none;
    position: relative;
    width: 100%;
  }

  #search-icon {
    width: 1.188rem;
    height: 1.188rem;
  }

  #search-field {
    height: 3.125rem;
    font-size: 1.125rem;
  }

  #search-field::placeholder {
    opacity: 0.8;
    color: var(--gray);
    font-size: 1.125rem;
    font-weight: 400;
  }

  #search-results {
    position: absolute;
    left: 0;
    border: none;
    width: 100%;
    background-color: var(--white);
    overflow: scroll;
    max-height: 60vh;
    scrollbar-width: none; /* Firefox */
    top: 26px;
    border-radius: 0 0 30px 30px;
    padding-top: 25px;
  }

  #search-results::-webkit-scrollbar {
    display: none;
  }

  .search-results-link {
    border: none;
  }

  .search-address {
    font-size: 14px;
  }

  #burger {
    display: none;
  }

  #site-nav {
    position: absolute;
    top: 0;
    right: 0;
    width: auto;
    height: 70px;
    padding-right: 48px;
    display: flex;
    align-items: center;
    justify-content: center;
    box-shadow: none;
  }

  #nav-menu {
    display: flex;
    gap: 2rem;
    list-style-type: none;
    justify-content: flex-end;
  }

  .panel {
    position: unset;
    border-radius: 0%;
  }

  .panel span {
    display: block;
  }

  .nav-link {
    display: flex;
    align-items: center;
    height: auto;
    width: auto;
    padding: 0;
    background-color: var(--white);
  }

  #add-new-wrapper {
    background-color: var(--white);
    position: absolute;
    top: 86px;
    right: 48px;
    padding: 8px 20px;
    height: 50px;
    border-radius: 30px;
    width: auto;
  }

  #add-place-icon {
    display: block;
    fill: var(--green);
  }

  .nav-link span {
    white-space: nowrap;
  }

  .nav-icon {
    display: none;
  }

  #nav-menu span {
    font-size: 18px;
  }

  .wrapper {
    margin-top: 0;
    position: relative;
    display: inline-block;
  }

  #add-place-link {
    gap: 5px;
    display: flex;
    width: auto;
    flex-direction: row;
  }

  #account-icon {
    display: block;
    border-radius: 50%;
    object-fit: cover;
  }

  .dropdown {
    visibility: hidden;
    transition: visibility 0s linear 0.5s;
    position: absolute;
    right: 0;
    border-radius: 10px;
    background: var(--white);
    box-shadow: 0 0.25rem 1.25rem 0 rgba(0, 0, 0, 0.25);
    font-size: 1.125rem;
    height: 5.25rem;
    z-index: 6;
    gap: 0.5rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 8px;

    & li {
      width: max-content;
      height: 24px;
      padding: 0;
    }
  }

  .wrapper:hover .dropdown {
    visibility: visible;
    transition-delay: 0s;
  }

  #logout-link {
    border: none;
    padding: 0;
    justify-content: center;
    background-color: var(--white);
    margin-bottom: 0;
    border-radius: 0%;
    width: auto;
  }

  #logout-link span {
    color: var(--black);
    font-weight: normal;
  }

  #logout-icon {
    display: none;
  }

  #account-links {
    display: none;
  }

  #add-new {
    display: none;
  }
}

